ct-transpiler/testsuite/bad/HidingPieceConstr/Init.hs
{-# LANGUAGE ComposableTypes #-}

module Init where

piececategory Expr

data piece Expr ==> Piece = Cons Int

